--- a/GraphxOrtho/packages.config
+++ b/GraphxOrtho/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GraphX" version="3.0.0" targetFramework="net461" />
+  <package id="OptimizedPriorityQueue" version="5.1.0" targetFramework="net461" />
   <package id="QuickGraphCore" version="1.0.0" targetFramework="net461" />
   <package id="QuikGraph" version="2.2.0" targetFramework="net461" />
 </packages>
