--- a/GraphxOrtho/GraphxOrtho.csproj
+++ b/GraphxOrtho/GraphxOrtho.csproj
@@ -131,5 +131,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Untitled Diagram.drawio %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
