Correct Orthogonal Visibility Graph completed.

--- a/GraphxOrtho/GraphxOrtho.csproj
+++ b/GraphxOrtho/GraphxOrtho.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\AlgorithmTools\DebugHelper.cs" />
+    <Compile Include="Models\AlgorithmTools\GeometryAnalizator.cs" />
     <Compile Include="Models\AlgorithmTools\OrthogonalVertex.cs" />
     <Compile Include="Models\AlgorithmTools\OrthogonalVisibilityGraph.cs" />
     <Compile Include="Models\DataEdge.cs" />
