--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -62,6 +62,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\OrthogonalTools\PriorityPointTests.cs" />
     <Compile Include="PointWithDirectionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
